# ChangeLog for x11-libs/cairo
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.111 2007/03/21 15:21:01 wolf31o2 Exp $

  21 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> cairo-1.2.6.ebuild:
  Stable on alpha/ia64 wrt bug #167573.

*cairo-1.4.2 (20 Mar 2007)

  20 Mar 2007; Doug Goldstein <cardoe@gentoo.org> -cairo-1.0.2.ebuild,
  -cairo-1.3.10.ebuild, -cairo-1.3.12.ebuild, -cairo-1.3.14.ebuild,
  -cairo-1.3.16.ebuild, +cairo-1.4.2.ebuild:
  Rev bump to 1.4.2. Remove old experimental versions.

*cairo-1.4.0 (06 Mar 2007)

  06 Mar 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.4.0.ebuild:
  bump to latest stable upstream release

*cairo-1.3.16 (03 Mar 2007)

  03 Mar 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.3.16.ebuild:
  rev bump to 1.4.0 release candidate

  22 Feb 2007; Jason Wever <weeve@gentoo.org> cairo-1.2.6.ebuild:
  Stable on SPARC wrt bug #167573.

  21 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> cairo-1.2.6.ebuild:
  Marked stable on amd64 for bug #167573

  20 Feb 2007; Markus Rothe <corsair@gentoo.org> cairo-1.2.6.ebuild:
  Stable on ppc64; bug #167573

  19 Feb 2007; Jeroen Roovers <jer@gentoo.org> cairo-1.2.6.ebuild:
  Stable for HPPA (bug #167573).

  19 Feb 2007; nixnut <nixnut@gentoo.org> cairo-1.2.6.ebuild:
  Stable on ppc wrt bug 167573

  19 Feb 2007; Raúl Porcel <armin76@gentoo.org> cairo-1.2.6.ebuild:
  x86 stable wrt bug 167573

*cairo-1.3.14 (19 Feb 2007)

  19 Feb 2007; <cardoe@gentoo.org> +cairo-1.3.14.ebuild:
  rev bump

  18 Feb 2007; Fabian Groffen <grobian@gentoo.org> cairo-1.0.2.ebuild,
  cairo-1.0.4.ebuild, cairo-1.0.4-r1.ebuild, cairo-1.2.4.ebuild,
  cairo-1.2.6.ebuild, cairo-1.3.10.ebuild, cairo-1.3.12.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*cairo-1.3.12 (20 Jan 2007)

  20 Jan 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.3.12.ebuild:
  new snapshot rev bump
