@@ -1,24 +1,24 @@
-DIST cairo-1.3.12.tar.gz 2812615 RMD160 2604af4bf3f98abdd586391dc5e43a3cb845ad16 SHA1 d84b48e06b2499e894f81c42361650ab5e00b974 SHA256 7337cec2f20e4a350d39f87a86c7fe04ae62bae412a8f3e77d1d749389ae9127
 DIST cairo-1.4.2.tar.gz 3081092 RMD160 53ad2e60507e181cb754991c1fe8f8de47f366a3 SHA1 9e7a323fc7d81d5011044d7eb22db3bf26ff7314 SHA256 7cf292ae376e7120ec548ad6a807a2f0f4f0539a304229a3bd98921453becd47
-EBUILD cairo-1.3.12.ebuild 1997 RMD160 5beb50e2236f6f8461975ef74da65aa1f2a903b3 SHA1 19a70ebc35bfa2da04f474393d873a3929742b23 SHA256 3355eead51c0180b8a249f59955dc270ab290ad8d274290b3f3f4ee8ae4d2a61
-MD5 ac37e526df061beea0b33751359b429a cairo-1.3.12.ebuild 1997
-RMD160 5beb50e2236f6f8461975ef74da65aa1f2a903b3 cairo-1.3.12.ebuild 1997
-SHA256 3355eead51c0180b8a249f59955dc270ab290ad8d274290b3f3f4ee8ae4d2a61 cairo-1.3.12.ebuild 1997
+DIST cairo-1.4.4.tar.gz 3129412 RMD160 69b71c4dc43a4f843772b6653ec158bea7680fe4 SHA1 71a7ce8352500944f7b2b73d4dc25ee947ec56ec SHA256 6469711192ebd359cd77cf299cfbea285dbba3cc857ff9268c74345bddf2b473
 EBUILD cairo-1.4.2.ebuild 2087 RMD160 5cf31abd5845bc5b8cfbf58553aef36d4c55727d SHA1 1c0340d90aab30ef66bd7a8338b073ddbb35f09d SHA256 d582999cf41116a47c9d0e46bee145f5e8c3b3dcd7b10104eeff051b6f55bd0a
 MD5 af76017781caa519b3496df6f16ecd86 cairo-1.4.2.ebuild 2087
 RMD160 5cf31abd5845bc5b8cfbf58553aef36d4c55727d cairo-1.4.2.ebuild 2087
 SHA256 d582999cf41116a47c9d0e46bee145f5e8c3b3dcd7b10104eeff051b6f55bd0a cairo-1.4.2.ebuild 2087
-MISC ChangeLog 16152 RMD160 5083b415f0a4c689066174f12a0d09a6634ec448 SHA1 43b2bd80c0942bc0179cc9969351d4267160f869 SHA256 2bfdef1a94c6e700c39d20a487c9679ae1cad8bf9355cbad8fbf6425d8ed7029
-MD5 f68382c12ec0084aa060dd34d4795be7 ChangeLog 16152
-RMD160 5083b415f0a4c689066174f12a0d09a6634ec448 ChangeLog 16152
-SHA256 2bfdef1a94c6e700c39d20a487c9679ae1cad8bf9355cbad8fbf6425d8ed7029 ChangeLog 16152
+EBUILD cairo-1.4.4.ebuild 2165 RMD160 1274578655831739f4ece3d59f1241b7f3883af6 SHA1 24b7c8d93a8037fc78a3f9c7b5bac337ab254e4e SHA256 c66be920d3931f8ce2aece646ea1d9c2076f3b289ffc0f89de55d59b4fcd7b6d
+MD5 0e0c817bb70efb5f09bf7e2d12a7a588 cairo-1.4.4.ebuild 2165
+RMD160 1274578655831739f4ece3d59f1241b7f3883af6 cairo-1.4.4.ebuild 2165
+SHA256 c66be920d3931f8ce2aece646ea1d9c2076f3b289ffc0f89de55d59b4fcd7b6d cairo-1.4.4.ebuild 2165
+MISC ChangeLog 16365 RMD160 a27b129ccf5edb4f9d592ffc0286fcf79d03317c SHA1 bc33218f0860a6469a0493089cda6098579034f6 SHA256 5dc771680b3d881e55c799bb5705d4396261a01f61570b4fc37e231aa32ea9b7
+MD5 04cc177801c38fde457b64b17280cb2d ChangeLog 16365
+RMD160 a27b129ccf5edb4f9d592ffc0286fcf79d03317c ChangeLog 16365
+SHA256 5dc771680b3d881e55c799bb5705d4396261a01f61570b4fc37e231aa32ea9b7 ChangeLog 16365
 MISC metadata.xml 295 RMD160 7614ff3a3ccd865defe12fb5f73c200af43c49c8 SHA1 f293511dbc2dfb8ead2b4c8c9d36203bcafd7261 SHA256 446934aa9e0ef514e2fdc11bcd45c350c6bfd93ee22ce63317a3c29c88bd29a3
 MD5 b9452f52e8bc190de74b4a7b1ff862ab metadata.xml 295
 RMD160 7614ff3a3ccd865defe12fb5f73c200af43c49c8 metadata.xml 295
 SHA256 446934aa9e0ef514e2fdc11bcd45c350c6bfd93ee22ce63317a3c29c88bd29a3 metadata.xml 295
-MD5 e76978a61a3b6a64ea676955a8fb3b7a files/digest-cairo-1.3.12 241
-RMD160 36c4890deab42854e6fa5bdcdd1dc6f2b4c5bafa files/digest-cairo-1.3.12 241
-SHA256 707562357ea97d1fdbe3ae63a4ba11a9c1de3a84dacda93ee7dee9d0700d972c files/digest-cairo-1.3.12 241
 MD5 befd66c00b97c7a4c998b62a9e102e73 files/digest-cairo-1.4.2 238
 RMD160 51714588c264ff45c4352157720a5b5bd9fd82ac files/digest-cairo-1.4.2 238
 SHA256 a223f637084ce9f59606a5b06beddb6cf91a34d396c66cff11897534203f66d3 files/digest-cairo-1.4.2 238
+MD5 072ef9a2d0755f05bf78a189350e5769 files/digest-cairo-1.4.4 238
+RMD160 b7fc48f09a17c53bac545da145cf3a117749d8ab files/digest-cairo-1.4.4 238
+SHA256 952828b2c734ff068401eca786bed256ba6152e732faf1c640d88ca1719c8ae5 files/digest-cairo-1.4.4 238
