@@ -1,3 +1,0 @@
-MD5 b6ac81de3c47529d1f39390943728c3d cairo-1.3.12.tar.gz 2812615
-RMD160 2604af4bf3f98abdd586391dc5e43a3cb845ad16 cairo-1.3.12.tar.gz 2812615
-SHA256 7337cec2f20e4a350d39f87a86c7fe04ae62bae412a8f3e77d1d749389ae9127 cairo-1.3.12.tar.gz 2812615
