@@ -1,0 +1,3 @@
+MD5 a609118644e1d958d977821c6fd765a9 cairo-1.4.4.tar.gz 3129412
+RMD160 69b71c4dc43a4f843772b6653ec158bea7680fe4 cairo-1.4.4.tar.gz 3129412
+SHA256 6469711192ebd359cd77cf299cfbea285dbba3cc857ff9268c74345bddf2b473 cairo-1.4.4.tar.gz 3129412
