@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.111 2007/03/21 15:21:01 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.112 2007/04/15 15:32:13 cardoe Exp $
+
+*cairo-1.4.4 (15 Apr 2007)
+
+  15 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.4.4.ebuild:
+  revbump from upstream. reduces malloc calls. cleans up cases when malloc
+  fails. cleans up other assorted bugs.
 
   21 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> cairo-1.2.6.ebuild:
   Stable on alpha/ia64 wrt bug #167573.
